--- a/perf_limits/nwthpool/nwthpool.project
+++ b/perf_limits/nwthpool/nwthpool.project
@@ -8,6 +8,7 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
+    <File Name="TestWork.h"/>
     <File Name="pool.cpp"/>
     <File Name="pool.h"/>
     <File Name="application.cpp"/>
