Completed functional and memory tests, for network listener service with demo palindrome logic

--- a/perf_limits/nwthpool/nwthpool.project
+++ b/perf_limits/nwthpool/nwthpool.project
@@ -8,6 +8,7 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
+    <File Name="BusinessLogic.h"/>
     <File Name="Server.cpp"/>
     <File Name="ConnectionManager.cpp"/>
     <File Name="ConnectionManager.h"/>
