--- a/perf_limits/nwthpoolTest/nwthpoolTest.project
+++ b/perf_limits/nwthpoolTest/nwthpoolTest.project
@@ -8,6 +8,9 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
+    <File Name="pool.cpp"/>
+    <File Name="pool.h"/>
+    <File Name="Client.h"/>
     <File Name="main.cpp"/>
   </VirtualDirectory>
   <Settings Type="Executable">
